# Food-Ordering-Modular-CP-UTCN

./: CMakeLists.txt  additional_things.c  buyer.c  buyer.h  choosingFood.c  data_loading.c  data_loading.h  food.c  food.h  free_memory.c  free_memory.h  initialize_variables.c  login.c  login.h  main.c  order.h  order_confimation.c  readme.txt  type.c  type.h  user_data.c  variables.h
